# Pal_Gsoc_RFID

./: .gitignore  LICENSE  README.md  autoserve.Dockerfile  autoserve_entrypoint.bash  copy.sh  docker-compose.yml
.circleci/: config.yml
.devcontainer/: build_command.sh  devcontainer.json
.github/workflows/: AutoServe_CI.yml  lint.yml
DummySensorSystem/: CMakeLists.txt  DummySensor.sdf
DummySensorSystem/include/DummySensorSystem/: DummySensorSystem.hh
DummySensorSystem/src/: DummySensorSystem.cc
autoserve_3dmapping/: CMakeLists.txt  command.txt  package.xml
autoserve_3dmapping/launch/: octomap2gridmap.launch.py
autoserve_3dmapping/maps/: cafe.bt
autoserve_3dmapping/rviz/: octomap_rviz.rviz
autoserve_controller/: CMakeLists.txt  package.xml
autoserve_controller/config/: autoserve_controller.yaml  autoserve_controllers.yaml
autoserve_controller/launch/: controller.launch.py
autoserve_description/: CMakeLists.txt  package.xml
autoserve_description/launch/: display.launch.py  gazebo.launch.py  robot_description.launch.py
autoserve_description/meshes/: depth_camera_v1_2.stl  imu_v1_1.stl  left_wheel_v1_1.stl  plate_1_v2_1.stl  plate_1_v2_2.stl  right_wheel_v1_1.stl  yd_lidar_v1_1.stl  ydlidar_v1_1.stl
autoserve_description/rviz/: display.rviz
autoserve_description/urdf/: autoserve.trans  autoserve.xacro  autoserve_gazebo.xacro  autoserve_ros2_control.xacro  materials.xacro
autoserve_gazebo/: CMakeLists.txt  package.xml
autoserve_gazebo/config/: gz_bridge.yaml
autoserve_gazebo/launch/: gazebo.launch.py
autoserve_gazebo/worlds/: cafe_harmonic.world
autoserve_mapping/: CMakeLists.txt  package.xml
autoserve_mapping/launch/: cartographer.launch.py
autoserve_mapping/maps/: cafe_3d.yaml
autoserve_navigation/: CMakeLists.txt  package.xml
autoserve_navigation/config/: navigation.yaml
autoserve_navigation/launch/: navigation.launch.py
autoserve_navigation/rviz/: navigation.rviz
autoserve_perception/: CMakeLists.txt  package.xml
autoserve_perception/src/: detect_table.py
dummy_sensor/: CMakeLists.txt  package.xml
dummy_sensor/include/dummy_sensor/: DummySensor.hh
dummy_sensor/src/: DummySensor.cc
dummy_sensor_system/: CMakeLists.txt  DummySensor.sdf  package.xml
dummy_sensor_system/include/dummy_sensor_system/: DummySensorSystem.hh
dummy_sensor_system/src/: DummySensorSystem.cc
test/: package.xml
